--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Code Catalyst Leaderboard</title>
+    <title>CodeCatalyst</title>
+    <link rel="icon" type="image/png" href="./assets/logo-circle.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script>document.querySelector('#contact-form').addEventListener('submit', (e) => {
         e.preventDefault();
@@ -20,7 +21,7 @@
     <header class="mb-4">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
-                <a class="navbar-brand" href="#home"><h1>Code Catalyst</h1></a>
+                <a class="navbar-brand" href="#home"><h1><img src="./assets/logo.jpg" alt="logo" style="margin-bottom: 10px;width: 40px; border-radius: 50%;"> Code Catalyst</h1></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -44,8 +45,8 @@
                 <p class="lead">Improve your coding skills with real-world challenges.</p>
                 <p class="lead">Join now and showcase your achievements!</p>
                 <p class="lead">
-                    <a href="signup.html" class="btn btn-lg btn-primary fw-bold me-2">Sign Up for Leaderboard</a>
-                    <a href="leaderboard.html" class="btn btn-lg btn-light fw-bold">View Leaderboard</a>
+                    <a href="signup.html" class="btn btn-lg btn-primary fw-bold me-2" target="_blank">Sign Up for Leaderboard</a>
+                    <a href="leaderboard.html" class="btn btn-lg btn-light fw-bold" target="_blank">View Leaderboard</a>
                 </p>
             </main>
         </div>
@@ -62,7 +63,7 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <div class="center-img">
-                    <img src="./IMG_0564.jpg" class="w-60 h-75" alt="Slide 1">
+                    <img src="./assets/NikhilPhoto.png" class="w-60 h-75" alt="Nikhil Photo">
                 </div>                
                 <div class="container">
                     <div class="carousel-caption">
@@ -74,7 +75,7 @@
             </div>
             <div class="carousel-item">
                 <div class="center-img">
-                    <img src="./IMG_0564.jpg" class="d-block w-60 h-75" alt="Slide 2">
+                    <img src="./assets/RohithPhoto.png" class="d-block w-60 h-75" alt="Rohith Photo">
                 </div>
                 <div class="container">
                     <div class="carousel-caption">
@@ -124,9 +125,8 @@
               <div class="alt-send-button">
                 <i class="fa fa-paper-plane"></i><span class="send-text">SEND</span>
               </div>
-            
+
             </button>
-            
           </form>
             <div class="direct-contact-container">
               <ul class="contact-list">
@@ -142,15 +142,16 @@
       <div class="container" style="margin: 60px; padding: 70px;">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
           <div class="col-md-4 d-flex align-items-center">
-            <span class="mb-3 mb-md-0 text-white">© 2025 Code-Catalyst, Inc</span>
+            <span class="mb-3 mb-md-0 text-white">© 2025 Code Catalyst</span>
           </div>
           <ul class="nav col-md-4 justify-content-end">
-            <li class="nav-item"><a href="https://discord.gg/ZVyVr9ZgeY" class="nav-link px-2 text-white">Join Us On Discord</a></li>
+            <li class="nav-item"><a  href="https://discord.gg/ZVyVr9ZgeY" class="nav-link px-2 text-white" target="_blank">Join Us On Discord</a></li>
           </ul>
         </footer>
       </div>
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
+      <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+      <script src="./scripts/contact.js"></script>
 </body>
 </html>
