--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="icon" type="png/image" href="./assets/logo-circle.png">
+    <link rel="stylesheet" href="./styles/signup.css">
 </head>
 <body>
-    <h1>Sign Up</h1>
+    
     <form id="signup-form">
+        <h1>Sign Up</h1>
         <input type="text" name="name" placeholder="Name" required>
         <input type="text" name="rollNo" placeholder="Roll No" required>
         <input type="text" name="classSec" placeholder="Class-Sec" required>
