Updated frontend files

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <p class="lead">Join now and showcase your achievements!</p>
                 <p class="lead">
                     <a href="signup.html" class="btn btn-lg btn-primary fw-bold me-2" target="_blank">Sign Up for Leaderboard</a>
-                    <a href="leaderboard.html" class="btn btn-lg btn-light fw-bold" target="_blank">View Leaderboard</a>
+                    <a href="leaderboard.html" class="btn btn-lg btn-light fw-bold">View Leaderboard</a>
                 </p>
             </main>
         </div>
