--- a/leaderboard.html
+++ b/leaderboard.html
@@ -4,14 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leaderboard</title>
+    <link rel="icon" type="imgage/png" href="./assets/logo-circle.png">
     <link rel="stylesheet" href="./styles/leaderboard.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
+    <div>
+    <h1 style="color: aliceblue;"><img src="./assets/logo.jpg" alt="logo" style="margin-bottom: 10px;width: 40px; border-radius: 50%;"> Code Catalyst</h1>
+    </div>
     <div class="container">
-        <h1>Leaderboard</h1>
-        <table>
+        <h2>Leaderboard</h2>
+        <table class="table table-dark table-striped-columns">
             <thead>
                 <tr>
+                    <th>S. No</th>
                     <th>Name</th>
                     <th>Roll No</th>
                     <th>Instructor</th>
