Updated frontend files

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body class="d-flex flex-column text-center text-white bg-dark">
     <header class="mb-4">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background: url('../frontend/assets/Background-1.png');">
             <div class="container">
                 <a class="navbar-brand" href="#home"><h1><img src="./assets/logo.jpg" alt="logo" style="margin-bottom: 10px;width: 40px; border-radius: 50%;"> Code Catalyst</h1></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,10 +27,10 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a href="#home" class="nav-link" aria-current="page">Home</a></li>
-                        <li class="nav-item"><a href="#About" class="nav-link">About Us</a></li>
-                        <li class="nav-item"><a href="#contact" class="nav-link">Contact Us</a></li>
-                        <li class="nav-item"><a href="#contact" class="nav-link active">Report An Issue</a></li>
+                        <li class="nav-item"><a href="#home" class="nav-link" aria-current="page">Home📟</a></li>
+                        <li class="nav-item"><a href="#About" class="nav-link">About Us👨‍💻</a></li>
+                        <li class="nav-item"><a href="#contact" class="nav-link">Contact Us📞</a></li>
+                        <li class="nav-item"><a href="#contact" class="nav-link active">Report An Issue❌</a></li>
                     </ul>
                 </div>
             </div>
@@ -40,13 +40,13 @@
         <div style="margin: 100px; padding: 80px;">
         <div class="cover-container d-flex flex-column align-items-center justify-content-center flex-grow-1">
             <main class="px-3">
-                <h1>Welcome to the Leaderboard</h1>
+                <h1>Welcome to the Leaderboard🧗</h1>
                 <p class="lead">Track your progress, compete with others, and climb the ranks!</p>
                 <p class="lead">Improve your coding skills with real-world challenges.</p>
                 <p class="lead">Join now and showcase your achievements!</p>
                 <p class="lead">
-                    <a href="signup.html" class="btn btn-lg btn-primary fw-bold me-2" target="_blank">Sign Up for Leaderboard</a>
-                    <a href="leaderboard.html" class="btn btn-lg btn-light fw-bold">View Leaderboard</a>
+                    <a href="signup.html" class="btn btn-lg btn-primary fw-bold me-2" target="_blank">Sign Up for Leaderboard💻🧑‍💻</a>
+                    <a href="leaderboard.html" class="btn btn-lg btn-light fw-bold">View Leaderboard🏆</a>
                 </p>
             </main>
         </div>
@@ -68,7 +68,7 @@
                 <div class="container">
                     <div class="carousel-caption">
                         <h1>Nikhil</h1>
-                        <p>Software Developer and Instructor at TrailBliz</p>
+                        <p>Software Developer and Instructor at TrailBliz <img src="./assets/trailbliz-logo.png" alt="trailbliz-logo" style="width: 30px;"></p>
                         <p><a class="btn btn-lg btn-primary" href="#contact">Connect</a></p>
                     </div>
                 </div>
@@ -80,7 +80,7 @@
                 <div class="container">
                     <div class="carousel-caption">
                         <h1>Rohith</h1>
-                        <p>Software Developer and Instructor at TrailBliz</p>
+                        <p>Software Developer and Instructor at TrailBliz <img src="./assets/trailbliz-logo.png" alt="trailbliz-logo" style="width: 30px;"></p>
                         <p><a class="btn btn-lg btn-primary" href="#contact">Connect</a></p>
                     </div>
                 </div>
@@ -145,7 +145,7 @@
             <span class="mb-3 mb-md-0 text-white">© 2025 Code Catalyst</span>
           </div>
           <ul class="nav col-md-4 justify-content-end">
-            <li class="nav-item"><a  href="https://discord.gg/ZVyVr9ZgeY" class="nav-link px-2 text-white" target="_blank">Join Us On Discord</a></li>
+            <li class="nav-item"><a  href="https://discord.gg/ZVyVr9ZgeY" class="nav-link px-2 text-white" target="_blank">Join Us On Discord <i class="fa-brands fa-discord"></i></a></li>
           </ul>
         </footer>
       </div>
