--- a/index.html
+++ b/index.html
@@ -6,13 +6,6 @@
     <title>CodeCatalyst</title>
     <link rel="icon" type="image/png" href="./assets/logo-circle.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script>document.querySelector('#contact-form').addEventListener('submit', (e) => {
-        e.preventDefault();
-        e.target.elements.name.value = '';
-        e.target.elements.email.value = '';
-        e.target.elements.message.value = '';
-      });
-    </script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="./styles/styles.css">
     
@@ -151,7 +144,7 @@
       </div>
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-      <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-      <script src="./scripts/contact.js"></script>
+      <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+      <script src="./scripts/email.js"></script>
 </body>
 </html>
