--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body class="d-flex flex-column text-center text-white bg-dark">
     <header class="mb-4">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background: url('../frontend/assets/Background-1.png');">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background: url('./assets/Background-1.png');">
             <div class="container">
                 <a class="navbar-brand" href="#home"><h1><img src="./assets/logo.jpg" alt="logo" style="margin-bottom: 10px;width: 40px; border-radius: 50%;"> Code Catalyst</h1></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
